Clean up SimpleIO and Tests